@startuml
skinparam classAttributeIconSize 0

class Eiendom{
-int kommuneNummer
-int gårdsNummer
-int bruksNummer
-float areal
-String kommuneNavn
-String bruksNavn
-String navnPåEier

+Eiendom(int kommuneNummer, String kommuneNavn, int gårdsNummer, int bruksNummer, String bruksNavn, float areal, String navnPåEier)

+getGårdsNummer()
+getAreal()
+getUnikId()
+toString()
}

class EiendomRegister{
-ArrayList eiendommer

+EiendomRegister()

+nyEiendom(int kommuneNummer, String kommuneNavn, int gårdsNummer, int bruksNummer, String bruksNavn, float areal, String navnPåEier)
+fjernEiendom(int kommuneNummer, int gårdsNummer, int bruksNummer)
+lesEiendommer()
+søkEiendom(int kommuneNummer, int gårdsNummer, int bruksNummer)
+gjennomsnittligEiendomStørrelse()
+antallEiendommer()
+søkGnr()
}

class Klient{
+static void main(String args[])
}

EiendomRegister *-- Eiendom: "1" "0..*"
Klient *-- EiendomRegister: "1" "0..*"

@enduml